<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.16</version>
        <relativePath/>
    </parent>

    <groupId>com.github.dgavrikov.core</groupId>
    <artifactId>core-parent</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>
    <modules>
        <module>core-database-postgresql</module>
        <module>core-common-services</module>
        <module>core-xml</module>
        <module>core-kafka</module>
        <module>core-correlation</module>
        <module>core-logbook-logging</module>
        <module>core-redis</module>
        <module>core-uap-security-web</module>
    </modules>

    <properties>
        <revision>3.5.1</revision>
        <encoding>UTF-8</encoding>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <maven.compiler.release>21</maven.compiler.release>

        <jetbrains.version>26.0.2</jetbrains.version>

        <maven.compiler-plugin.version>3.15.0</maven.compiler-plugin.version>
        <maven.source-plugin.version>3.4.0</maven.source-plugin.version>
        <flatten-maven-plugin.version>1.7.3</flatten-maven-plugin.version>

        <lombok.version>1.18.46</lombok.version>
        <mapstruct.version>1.6.3</mapstruct.version>
        <jetbrains.version>26.1.0</jetbrains.version>
        <commons-lang3.version>3.20.0</commons-lang3.version>
        <commons-collection4.version>4.5.0</commons-collection4.version>
        <micrometer.version>1.16.6</micrometer.version>
        <commons-beanutils.version>1.11.0</commons-beanutils.version>
        <jna.version>5.19.1</jna.version> <!-- 5.18.1 -->
        <nimbus-jose-jwt.version>10.9.1</nimbus-jose-jwt.version>
        <org.eclipse.jgit.version>7.7.0.202606012155-r</org.eclipse.jgit.version>
        <jaxb-runtime.version>4.0.9</jaxb-runtime.version>
        <jakarta-xml-bind-api.version>4.0.5</jakarta-xml-bind-api.version>
        <reflection.version>0.10.2</reflection.version>
        <logstash-logback-encoder.version>9.0</logstash-logback-encoder.version>
        <java-uuid-generator.version>5.2.0</java-uuid-generator.version>
        <org.zalando.version>3.12.3</org.zalando.version>
        <java-jwt.version>4.5.2</java-jwt.version>
        <jwks-rsa.version>0.24.1</jwks-rsa.version> <!-- 0.23.1 -->

    </properties>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.github.dgavrikov.core</groupId>
                <artifactId>core-common-services</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.github.dgavrikov.core</groupId>
                <artifactId>core-correlation</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.github.dgavrikov.core</groupId>
                <artifactId>core-database-postgresql</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.github.dgavrikov.core</groupId>
                <artifactId>core-kafka</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.github.dgavrikov.core</groupId>
                <artifactId>core-logbook-logging</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.github.dgavrikov.core</groupId>
                <artifactId>core-redis</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.github.dgavrikov.core</groupId>
                <artifactId>core-uap-security-web</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.github.dgavrikov.core</groupId>
                <artifactId>core-xml</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>io.micrometer</groupId>
                <artifactId>micrometer-bom</artifactId>
                <version>${micrometer.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-beanutils</groupId>
                <artifactId>commons-beanutils</artifactId>
                <version>${commons-beanutils.verison}</version>
            </dependency>
            <dependency>
                <groupId>net.java.dev.jna</groupId>
                <artifactId>jna</artifactId>
                <version>${jna.version}</version>
            </dependency>
            <dependency>
                <groupId>net.java.dev.jna</groupId>
                <artifactId>jna-platform</artifactId>
                <version>${jna.version}</version>
            </dependency>
            <dependency>
                <groupId>org.codehaus.plexus</groupId>
                <artifactId>plexus-utils</artifactId>
                <version>${plexus-utils.version}</version>
            </dependency>
            <dependency>
                <groupId>com.nimbusds</groupId>
                <artifactId>nimbus-jose-jwt</artifactId>
                <version>${nimbus-jose-jwt.version}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.jgit</groupId>
                <artifactId>org.eclipse.jgit</artifactId>
                <version>${org.eclipse.jgit.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>${jetbrains.version}</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct</artifactId>
            <version>${mapstruct.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${commons-lang3.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-collections4</artifactId>
            <version>${commons-collection4.version}</version>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven.compiler-plugin.version}</version>
                    <configuration>
                        <release>${maven.compiler.release}</release>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                            <path>
                                <groupId>org.mapstruct</groupId>
                                <artifactId>mapstruct-processor</artifactId>
                                <version>${mapstruct.version}</version>
                            </path>
                            <path>
                                <groupId>org.springframework.boot</groupId>
                                <artifactId>spring-boot-configuration-processor</artifactId>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <configuration>
                        <excludes>
                            <exclude>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                            </exclude>
                        </excludes>
                    </configuration>
                    <executions>
                        <execution>
                            <goals>
                                <goal>repackage</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire-plugin.version}</version>
                    <configuration>
                        <argLine>@{argLine} -XX:+EnableDynamicAgentLoading</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>${jacoco-maven-plugin.version}</version>
                    <configuration>
                        <excludes>
                            <exclude>**/config/**</exclude>
                            <exclude>**/dto/**</exclude>
                            <exclude>**/model/**</exclude>
                            <exclude>**/entity/**</exclude>
                            <exclude>**/exception/**</exclude>
                        </excludes>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>${maven-failsafe-plugin.version}</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>integration-test</goal>
                                <goal>verify</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>${maven-dependency-plugin.version}</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>properties</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${maven.source-plugin.version}</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>${flatten-maven-plugin.version}</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>